# threadcount

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
src/threadcount/: __init__.py  models.py  mpdaf_ext.py
src/threadcount/models/: basic.py  fast_models.py  models.py
