[build-system]
requires = [
    "setuptools>=46.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "threadcount"
description = "Astronomy data cube spectral line fitting"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "FisherAstronomy", email = "dfisher@swin.edu.au"}
]
keywords = ["astronomy", "data", "cube", "spectral", "line", "fitting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "lmfit @ git+https://github.com/sebusch/light-lmfit-py.git@light_dev#egg=lmfit",
    "matplotlib >= 3.4.3",
    "mpdaf >= 3.5",
    "numpy >= 1.17.0,<2",
    "astropy >= 3.2.1",
    "numdifftools",
    "numba",
    "scipy",
    "ipython",
    "notebook",
    "jupyterlab",
    "pandas"
]
dynamic = ["version"]

[project.urls]
homepage = "https://threadcount.readthedocs.io"
source = "https://github.com/FisherAstronomy/threadcount"
issues = "https://github.com/FisherAstronomy/threadcount/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
]

[tool.setuptools.dynamic]
version = {attr = "threadcount.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# Start permissive — enable a safe core set and expand gradually.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    # Rules that touch existing code style broadly — enable after incremental cleanup
    "E501",   # line too long (handled by formatter)
    "UP032",  # f-string conversion (Phase 2.3)
    "B006",   # mutable default argument — existing code relies on this pattern
    "B007",   # loop variable not used in loop body
    "B008",   # function call in default argument
    "B904",   # raise from inside except
    "F401",   # unused imports — existing API re-exports need audit first
    "F811",   # redefinition of unused name
    "F841",   # local variable assigned but never used
    "E741",   # ambiguous variable name (l, O, I) — widespread in astronomy code
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"